EPMDJ-6000: Update tests to run modal
Issue: EPMDJ-6000

--- a/src/modules/tests-to-run/tests-to-run-modal/tests-to-run-modal.module.scss
+++ b/src/modules/tests-to-run/tests-to-run-modal/tests-to-run-modal.module.scss
@@ -59,14 +59,15 @@
   &__command-wrapper {
     &:hover {
       .test-to-run-modal__copy-icon {
-        display: initial;
+        display: block;
       }
     }
   }
 
   &__copy-icon {
+    position: absolute;
+    right: 24px;
     display: none;
-    margin-left: 36px;
     color: map-get($primary-blue, default);
     cursor: pointer;
 
