--- a/src/app.scss
+++ b/src/app.scss
@@ -55,6 +55,12 @@ $font-sizes: (12, 14, 16, 18, 20, 22, 24, 26, 28, 30);
   padding: 0;
 }
 
+.text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .bold {
   font-family: $semibold-font !important;
 }
