--- a/src/app.scss
+++ b/src/app.scss
@@ -31,7 +31,7 @@ $spacers: (
   10: $spacer * 10,
 );
 
-$font-sizes: (12, 14, 16, 18, 20, 22, 24, 26, 28, 30);
+$font-sizes: (10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30);
 
 @import '../node_modules/bootstrap/scss/mixins/breakpoints';
 @import '../node_modules/bootstrap/scss/mixins/text-truncate';
