--- a/src/modules/tests-to-run/tests-to-run-list/bar-chart/bar-chart.module.scss
+++ b/src/modules/tests-to-run/tests-to-run-list/bar-chart/bar-chart.module.scss
@@ -119,9 +119,14 @@
 
   input[type='range'] {
     -webkit-appearance: none;
+    -moz-appearance: none;
     width: 100%;
     margin: 0px;
     transform: rotateY(180deg);
+
+    @-moz-document url-prefix() {
+      height: 8px;
+    }
 
     &:focus {
       outline: none;
@@ -133,11 +138,26 @@
       background: map-get($monochrome, medium-tint);
     }
 
+    &::-moz-range-track {
+      width: 100%;
+      height: 100%;
+      background: map-get($monochrome, medium-tint);
+    }
+
     &::-webkit-slider-thumb {
-      height: 8px;
       width: 30%;
+      height: 8px;
       background: map-get($data-visualization, scrollbar-thumb);
       -webkit-appearance: none;
+    }
+
+    &::-moz-range-thumb {
+      width: 30%;
+      height: 100%;
+      border: none;
+      border-radius: 0;
+      background: map-get($data-visualization, scrollbar-thumb);
+      -moz-appearance: none;
     }
   }
 
