EPMDJ-6058: Update buttons
Issue: EPMDJ-6058

--- a/src/pages/login-page/login-page.module.scss
+++ b/src/pages/login-page/login-page.module.scss
@@ -69,6 +69,7 @@
   &__login-as-guest-button {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 352px;
   }
 
