--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-    button:focus {
-        outline: none;
-    }
+  button:focus {
+    outline: none;
+  }
+
+  .text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
