EPMDJ-6078: Remove bootstrap
* fix: Outline styles

* chore: Replace w-100 class

* chore: Replace align-items-center class

* chore: Replace align-items-start class

* chore: Replace align-items-stretch class

* chore: Replace d-flex class

* chore: Replace justify-content-between class

* chore: Replace justify-content-end class

* chore: Replace justify-content-center class

* chore: Replace bold class

* chore: Replace gap class

* chore: Replace height class

* chore: Replace font-size class

* chore: Replace line-hieght class

* fix: Button outline

* chore: Replace flex-column class

* chore: Remove bootstrap

* fix: Incorrect default font, gaps

--- a/src/index.css
+++ b/src/index.css
@@ -541,6 +541,20 @@ video {
   height: auto;
 }
 
+body {
+  font-family: "OpenSans", sans-serif;
+}
+
+button:focus {
+  outline: none;
+}
+
+.text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .container {
   width: 100%;
 }
