--- a/src/modules/covered-methods-by-test-sidebar/methods-list/methods-list.module.scss
+++ b/src/modules/covered-methods-by-test-sidebar/methods-list/methods-list.module.scss
@@ -29,9 +29,10 @@
   }
 
   &__filter {
-    margin-top: 14px;
-    margin-left: 24px;
+    padding: 8px 24px;
+    line-height: 32px;
     color: map-get($orange, default);
+    border-bottom: 1px solid map-get($monochrome, medium-tint);
   }
 
   &__methods {
@@ -47,6 +48,10 @@
     justify-content: center;
     padding: 0 24px;
     font-size: 12px;
+
+    &:first-child {
+      margin-top: 8px;
+    }
   }
 
   &__coverage-icon,
