--- a/src/modules/breadcrumbs/breadcrumbs.module.scss
+++ b/src/modules/breadcrumbs/breadcrumbs.module.scss
@@ -21,6 +21,14 @@
   }
 
   :not(:first-child) {
+    &:hover {
+      color: map-get($primary-blue, medium-tint);
+    }
+
+    &:active {
+      color: map-get($primary-blue, shade);
+    }
+
     &:before {
       padding: 0 8px;
       color: map-get($monochrome, default);
