--- a/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
+++ b/src/pages/agent-full-page/plugin-header/plugin-header.module.scss
@@ -77,6 +77,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 24px;
+    max-width: 50%;
 
     & > * {
       margin-bottom: 8px;
