--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
@@ -134,6 +134,10 @@
     &:hover {
       color: map-get($primary-blue, medium-tint);
     }
+
+    &:active {
+      color: map-get($primary-blue, shade);
+    }
   }
 
   &__link-icon {
