--- a/src/pages/service-group-full-page/test-to-code-plugin/test-to-code-cell/test-to-code-cell.module.scss
+++ b/src/pages/service-group-full-page/test-to-code-plugin/test-to-code-cell/test-to-code-cell.module.scss
@@ -28,6 +28,14 @@
 
     &--clickable {
       cursor: pointer;
+
+      &:hover {
+        color: map-get($primary-blue, medium-tint);
+      }
+
+      &:active {
+        color: map-get($primary-blue, shade);
+      }
     }
   }
 
