EPMDJ-6856: Fix fonts
Issue: EPMDJ-6856

--- a/src/common/style-guide/fonts/fonts.scss
+++ b/src/common/style-guide/fonts/fonts.scss
@@ -15,28 +15,28 @@
  */
 @font-face {
   font-family: 'OpenSans';
-  src: url('./OpenSans-Regular.ttf') format('truetype');
+  src: url('./OpenSans-Regular.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'OpenSans-Light';
-  src: url('./OpenSans-Light.ttf') format('truetype');
+  src: url('./OpenSans-Light.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'OpenSans-Semibold';
-  src: url('./OpenSans-SemiBold.ttf') format('truetype');
+  src: url('./OpenSans-SemiBold.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'OpenSans-Bold';
-  src: url('./OpenSans-Bold.ttf') format('truetype');
+  src: url('./OpenSans-Bold.woff2') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
